--- a/templates/form.html
+++ b/templates/form.html
@@ -14,7 +14,7 @@
 <body>
     <div id="container">
     <header>
-        <img src="images/head.jpg" alt="books">
+        <img src="/static/head.jpg" alt="books">
     </header>
     <main>
         <form action="/story" method="post">
@@ -46,7 +46,7 @@
                 <label>Noun 10: </label><input type="text" name="noun10">
 
                 <label>Proper Noun 1: </label><input type="text" name="proper_noun1">
-                <label>Proper Noun 1: </label><input type="text" name="proper_noun2">
+                <label>Proper Noun 2: </label><input type="text" name="proper_noun2">
 
                 <label>Adverb 1: </label><input type="text" name="adverb">
                 <input type="submit" value="Submit">
