--- a/templates/story.html
+++ b/templates/story.html
@@ -10,23 +10,23 @@
 </head>
 
 <body>
-<div id="wrapper">
+    <div id="wrapper">
 
-    <header>
-    <img src="/static/madlibs.jpg" alt="madlibs" />
-    <h1>by ITC110</h1>
-    </header>
+        <header>
+            <img src="/static/madlibs.jpg" alt="madlibs">
+            <h1>by ITC110</h1>
+        </header>
 
-    <h2>Story Title</h2>
-    <p>
-        It has been about 13 days since the zombies came.  {{ context.proper_noun1 }}, {{ context.proper_noun2 }} and myself were the only ones left when we found {{ context.noun1 }}.  The whole {{ context.noun2 }} came crashing down.  I {{ context.verb1 }} my way through the {{ context.adj1 }} dead.  That’s when I found my friends being {{ context.verb2 }} by the undead ghouls.  As horror flooded my eyes, I {{ context.adverb }} {{ context.verb3 }} to try and save them.  Soon enough, we were {{ context.verb4 }} by this hungry {{ context.noun3 }}.  The only thing left for me to do is {{ context.verb5 }}.  As I turned away from the horde, I found myself face to face with a {{ context.noun4 }}.  Before long I managed to {{ context.verb6 }} the zombie and left my friends to be {{ context.adj2 }} {{ context.noun5 }}.  I couldn’t feel anything but remorse for them.  I felt guilty as I kept {{ context.verb7 }}ing, but they {{ context.verb8 }}ed me.  All I could do is run, but they seem to be coming from {{ context.noun6 }}.  Before long, I came out to a {{ context.noun7 }}.  Within seconds, I see smoke coming from behind a {{ context.noun8 }}.  I begin to {{ context.adj3 }} {{ context.verb9 }} when I finally see more people.  As I come up to the gigantic {{ context.noun9 }}, I’m greeted by a friendly {{ context.noun10 }}.  They open the doors and I’m finally safe, or so I {{ context.verb10 }}.
-    </p>
+        <h2>Story Title</h2>
+        <p>
+            It has been about 13 days since the zombies came.  {{ context.proper_noun1 }}, {{ context.proper_noun2 }} and myself were the only ones left when we found {{ context.noun1 }}.  The whole {{ context.noun2 }} came crashing down.  I {{ context.verb1 }} my way through the {{ context.adj1 }} dead.  That’s when I found my friends being {{ context.verb2 }} by the undead ghouls.  As horror flooded my eyes, I {{ context.adverb }} {{ context.verb3 }} to try and save them.  Soon enough, we were {{ context.verb4 }} by this hungry {{ context.noun3 }}.  The only thing left for me to do is {{ context.verb5 }}.  As I turned away from the horde, I found myself face to face with a {{ context.noun4 }}.  Before long I managed to {{ context.verb6 }} the zombie and left my friends to be {{ context.adj2 }} {{ context.noun5 }}.  I couldn’t feel anything but remorse for them.  I felt guilty as I kept {{ context.verb7 }}ing, but they {{ context.verb8 }}ed me.  All I could do is run, but they seem to be coming from {{ context.noun6 }}.  Before long, I came out to a {{ context.noun7 }}.  Within seconds, I see smoke coming from behind a {{ context.noun8 }}.  I begin to {{ context.adj3 }} {{ context.verb9 }} when I finally see more people.  As I come up to the gigantic {{ context.noun9 }}, I’m greeted by a friendly {{ context.noun10 }}.  They open the doors and I’m finally safe, or so I {{ context.verb10 }}.
+        </p>
 
-</div>
+    </div>
 
-<footer>
-  <p><small>&copy; 2017 ITC110, All Rights Reserved</small></p>
-</footer>
+    <footer>
+      <p><small>&copy; 2017 ITC110, All Rights Reserved</small></p>
+    </footer>
 
 </body>
 </html>
